--- a/.github/workflows/wtest.yml
+++ b/.github/workflows/wtest.yml
@@ -21,37 +21,37 @@ jobs:
           pwd
           echo "main is done..."
           
-      #- name: runyhf
-      #  uses: actions/checkout@v2
-      #  with:
-      #    repository: dsjena/runyhf
-      #    token: ${{ secrets.SUPER_SECRET }}
-      #    path: runyhf
-      #- name: Set up Python
-      #  uses: actions/setup-python@v2
-      ##  with:
-      #    python-version: '3.8'
-      #- name: Install dependencies
-      #  run: |
-      #    cd ./runyhf/
-      #    python -m pip install --upgrade pip
-      #    pip install -r requirements-yq.txt
-      #- name: Actual Calculation
-      #  run: |
-      #    cd ./runyhf/
-      #    #ls 
-      #    dtt=`TZ=IST-5:30 date`
-      #    echo ${GITHUB_WORKSPACE}
-      #    echo "${dtt}" 
-      #    echo "${dtt}" >> recieved.md
-      #    bash make-rdme.sh >> log.txt 2>&1
-      #    echo "Running hour..."
-      #    sh hour.sh 
-      #    git config --local user.email "action@github.com"
-      #    git config --local user.name "GitHub Action"
-      #    git add .
-      #    git diff-index --quiet HEAD || git commit -m "Load YH" -a
-      #    git push
+      - name: runyhf
+        uses: actions/checkout@v2
+        with:
+          repository: dsjena/runyhf
+          token: ${{ secrets.SUPER_SECRET }}
+          path: runyhf
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.8'
+      - name: Install dependencies
+        run: |
+          cd ./runyhf/
+          python -m pip install --upgrade pip
+          pip install -r requirements-yq.txt
+      - name: Actual Calculation
+        run: |
+          cd ./runyhf/
+          #ls 
+          dtt=`TZ=IST-5:30 date`
+          echo ${GITHUB_WORKSPACE}
+          echo "${dtt}" 
+          echo "${dtt}" >> recieved.md
+          bash make-rdme.sh >> log.txt 2>&1
+          echo "Running hour..."
+          sh hour.sh 
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add .
+          git diff-index --quiet HEAD || git commit -m "Load YH" -a
+          git push
 
       - name: PostData
         uses: actions/checkout@v2
@@ -66,12 +66,12 @@ jobs:
           dtt=`TZ=IST-5:30 date`
           echo ${GITHUB_WORKSPACE}
           echo "${dtt}" 
-          #echo "${dtt}" >> recieved.md
-          #bash make-rdme.sh >> log.txt 2>&1
-          #ls ../runyhf
-          #rsync -av ../runyhf/data/* data/.
-          #git config --local user.email "action@github.com"
-          #git config --local user.name "GitHub Action"
-          #git add .
-          #git diff-index --quiet HEAD || git commit -m "Load YH" -a
-          #git push
+          echo "${dtt}" >> recieved.md
+          bash make-rdme.sh >> log.txt 2>&1
+          ls ../runyhf
+          rsync -av ../runyhf/data/* data/.
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add .
+          git diff-index --quiet HEAD || git commit -m "Load YH" -a
+          git push
